<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app_rect="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_tittle"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_layout_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <com.mapbar.adas.widget.CustomRectView
            android:id="@+id/user_driving_settings"
            android:layout_width="@dimen/size290"
            android:layout_height="@dimen/size230"
            android:background="@drawable/user_menu_background"
            app_rect:image="@drawable/user_center_setting"
            app_rect:image_height="@dimen/selft_menu_height"
            app_rect:titleMenu="@string/auxiliary_driving_settings"
            app_rect:image_margin="@dimen/padding_20"
            app_rect:title_color="@color/color_white"
            app_rect:title_size="@dimen/textSize30" />

        <com.mapbar.adas.widget.CustomRectView
            android:id="@+id/user_adas_calibartion"
            android:layout_width="@dimen/size290"
            android:layout_height="@dimen/size230"
            android:layout_marginLeft="@dimen/padding_50"
            app_rect:image_height="@dimen/selft_menu_height"
            android:background="@drawable/user_menu_background"
            app_rect:image="@drawable/user_center_calibration"
            app_rect:image_margin="@dimen/padding_20"
            app_rect:titleMenu="@string/adas_calibaration"
            app_rect:title_color="@color/color_white"
            app_rect:title_size="@dimen/textSize30" />

        <com.mapbar.adas.widget.CustomRectView
            android:id="@+id/user_about"
            android:layout_width="@dimen/size290"
            android:layout_height="@dimen/size230"
            android:layout_marginLeft="@dimen/padding_50"
            app_rect:image_height="@dimen/selft_menu_height"
            android:background="@drawable/user_menu_background"
            app_rect:image="@drawable/user_center_aboout"
            app_rect:image_margin="@dimen/padding_20"
            app_rect:titleMenu="@string/app_about"
            app_rect:title_color="@color/color_white"
            app_rect:title_size="@dimen/textSize30" />

    </LinearLayout>
</LinearLayout>