<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/layout_tittle"></include>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

        <LinearLayout xmlns:app_main="http://schemas.android.com/apk/res-auto"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@color/black_layout_bg"
                      android:orientation="vertical">



           <!--室内模拟-->
            <com.mapbar.adas.widget.SettingChoiceItemView
                android:id="@+id/setting_sim"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@color/user_setting_state_color_nor"
                app_main:choiceItems="@array/setting_item_switch"
                app_main:itemHeight="@dimen/setting_choice_item_height"
                app_main:sideItemWidth="@dimen/setting_choice_item_side_width"
                app_main:title="@string/setting_sim"
                app_main:titleColor="@color/color_white"
                app_main:titleSize="@dimen/setting_choice_tilte_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/setting_item_padding"
                android:background="@color/back_btn_round_color" />

            <RelativeLayout
                android:id="@+id/speed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="@dimen/setting_item_padding"
                    android:paddingRight="@dimen/setting_item_padding"
                    android:text="模拟车速"
                    android:textColor="@color/seekbar_textcolor_gray"
                    android:textColorHighlight="@color/color_white"
                    android:textSize="@dimen/textSize30" />

                <EditText
                    android:id="@+id/speed"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/setting_item_padding"
                    android:text="60" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/warning_continer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_layout_bg"
                android:orientation="vertical">


                <!--车道线-->
                <com.mapbar.adas.widget.SettingChoiceItemView
                    android:id="@+id/setting_car_ldw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@color/user_setting_state_color_nor"
                    app_main:choiceItems="@array/setting_item_switch"
                    app_main:itemHeight="@dimen/setting_choice_item_height"
                    app_main:sideItemWidth="@dimen/setting_choice_item_side_width"
                    app_main:title="@string/setting_car_ldw"
                    app_main:titleColor="@color/color_white"
                    app_main:titleSize="@dimen/setting_choice_tilte_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/setting_item_padding"
                    android:background="@color/back_btn_round_color" />

                <!--车道线灵敏度-->
                <com.mapbar.adas.widget.SettingChoiceItemView
                    android:id="@+id/setting_car_ldwSensitivity"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@color/user_setting_state_color_nor"
                    app_main:choiceItems="@array/setting_car_ldwSensitivity"
                    app_main:itemHeight="@dimen/setting_choice_item_height"
                    app_main:middleItemWidth="@dimen/size_170"
                    app_main:sideItemWidth="@dimen/size_186"
                    app_main:title="@string/setting_car_ldwSensitivity"
                    app_main:titleColor="@color/color_white"
                    app_main:titleSize="@dimen/setting_choice_tilte_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/setting_item_padding"
                    android:background="@color/back_btn_round_color" />

                <!--车道偏离时速-->
                <TextView
                    android:id="@+id/setting_front_warning_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/setting_item_padding"
                    android:paddingRight="@dimen/setting_item_padding"
                    android:text="@string/setting_lane_rate_speed"
                    android:textColor="@color/seekbar_textcolor_gray"
                    android:textSize="@dimen/textSize30" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/setting_item_padding"
                    android:background="@color/back_btn_round_color" />

                <FrameLayout
                    android:id="@+id/setting_lane_rate_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_180"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/setting_lane_rate_speed"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/setting_choice_tilte_size" />

                    <com.mapbar.adas.widget.NumberSeekBar
                        android:id="@+id/setting_seekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/setting_item_padding"
                    android:background="@color/back_btn_round_color" />

                <!--前车碰撞是否可用-->
                <com.mapbar.adas.widget.SettingChoiceItemView
                    android:id="@+id/setting_car_fcw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@color/user_setting_state_color_nor"
                    app_main:choiceItems="@array/setting_item_switch"
                    app_main:itemHeight="@dimen/setting_choice_item_height"
                    app_main:sideItemWidth="@dimen/setting_choice_item_side_width"
                    app_main:title="@string/setting_car_fcw"
                    app_main:titleColor="@color/color_white"
                    app_main:titleSize="@dimen/setting_choice_tilte_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/setting_item_padding"
                    android:background="@color/back_btn_round_color" />

                <!--前车碰撞灵敏度-->
                <com.mapbar.adas.widget.SettingChoiceItemView
                    android:id="@+id/setting_car_fcwSensitivity"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@color/user_setting_state_color_nor"
                    app_main:choiceItems="@array/setting_car_fcwSensitivity"
                    app_main:itemHeight="@dimen/setting_choice_item_height"
                    app_main:sideItemWidth="@dimen/setting_choice_item_side_width"
                    app_main:title="@string/setting_car_fcwSensitivity"
                    app_main:titleColor="@color/color_white"
                    app_main:titleSize="@dimen/setting_choice_tilte_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/setting_item_padding"
                    android:background="@color/back_btn_round_color" />

                <!--前车启动设置-->
                <com.mapbar.adas.widget.SettingChoiceItemView
                    android:id="@+id/setting_front_car_start"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@color/user_setting_state_color_nor"
                    app_main:choiceItems="@array/setting_item_switch"
                    app_main:itemHeight="@dimen/setting_choice_item_height"
                    app_main:sideItemWidth="@dimen/setting_choice_item_side_width"
                    app_main:title="@string/setting_front_car_start"
                    app_main:titleColor="@color/color_white"
                    app_main:titleSize="@dimen/setting_choice_tilte_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/setting_item_padding"
                    android:background="@color/back_btn_round_color" />

                <!--溜车提醒开关-->
                <com.mapbar.adas.widget.SettingChoiceItemView
                    android:id="@+id/setting_front_car_back"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@color/user_setting_state_color_nor"
                    app_main:choiceItems="@array/setting_item_switch"
                    app_main:itemHeight="@dimen/setting_choice_item_height"
                    app_main:sideItemWidth="@dimen/setting_choice_item_side_width"
                    app_main:title="@string/setting_car_back"
                    app_main:titleColor="@color/color_white"
                    app_main:titleSize="@dimen/setting_choice_tilte_size" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/setting_item_padding"
                android:background="@color/back_btn_round_color" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>